Added functionality to Add/Close button, now it shows/hides the add-task component, also added about page,and footer as well as routes which shift user between aplication pages without reloading the page

--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<form class="add-form" (ngSubmit) = "onSubmit()">
+<form *ngIf="varShowAddTask" class="add-form" (ngSubmit) = "onSubmit()">
     <div class="form-control">
         <label for="name-text">Task</label>
         <!-- 2way databinding between name-text variable and actual input using FormsModule  -->
