--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <app-header></app-header>
-  <app-tasks></app-tasks>
+  <!-- <app-tasks></app-tasks> TasksComponent is are homepage and we can replace it with route--> 
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
